--- a/SynopAnalizer/src/com/nwpi/view/SynopAnalizer.fxml
+++ b/SynopAnalizer/src/com/nwpi/view/SynopAnalizer.fxml
@@ -5,14 +5,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.nwpi.view.SynopAnalizerController">
+<AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nwpi.view.SynopAnalizerController">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button fx:id="analizeFileButton" mnemonicParsing="false" onAction="#initialize" prefHeight="30.0" prefWidth="100.0" text="Analize a file" textAlignment="CENTER">
                <VBox.margin>
-                  <Insets left="100.0" top="65.0" />
+                  <Insets left="100.0" top="50.0" />
                </VBox.margin>
             </Button>
             <Button fx:id="analizeFoldersButton" mnemonicParsing="false" onAction="#initialize" prefHeight="30.0" prefWidth="100.0" text="Analize folders" textAlignment="CENTER">
@@ -20,6 +19,11 @@
                   <Insets left="100.0" top="10.0" />
                </VBox.margin>
             </Button>
+            <ProgressBar fx:id="progressBar" prefWidth="200.0" progress="0.0">
+               <VBox.margin>
+                  <Insets left="50.0" top="20.0" />
+               </VBox.margin>
+            </ProgressBar>
          </children>
       </VBox>
    </children>
